--- a/views/chat.pug
+++ b/views/chat.pug
@@ -9,7 +9,7 @@ block scripts
 block content
     section.section-white
         h1 
-            a(href=makeUserUrl(other_user))= other_user.name
+            a(href=makeUserUrl(other_user)).fw-bold.text-dark= other_user.name
 
         hr
         
