--- a/views/event_create.pug
+++ b/views/event_create.pug
@@ -16,13 +16,13 @@ block content
 
                     br
                     label(for="text") Az esemény leírása:
-                    input(type="text", name="text", placeholder="Az esemény leírása", required="ture", value="").form-control
+                    textarea(type="text", name="text", placeholder="Az esemény leírása", required="ture", value="", rows="4").form-control
 
                     br
                     label(for="place") Az esemény helyszine:
                     input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value="").form-control
 
                     br
-                    input(type="submit", name="submit" value="Meghirdetés").btn.btn-success
+                    input(type="submit", name="submit" value="Meghirdetés").btn.btn-primary
         
     div(style="margin-bottom:500px;")
