--- a/views/part_event.pug
+++ b/views/part_event.pug
@@ -1,4 +1,4 @@
-a(href=makeEventUrl(event)).row.event-row
+a(href=makeEventUrl(event), style="border-radius: 15px !important;").row.section-white.event-row
     .col-sm
         p.fw-bold= event.name
     .col-sm
