--- a/views/part_user.pug
+++ b/views/part_user.pug
@@ -1,1 +1,4 @@
-p=user.name
+a(href=makeUserUrl(user) style="display:inline;")
+    img(src='/images/profiles/' + user.profile, alt='logo').pb-4.me-2.avatarkep
+    span.fw-bold= user.name
+br
