--- a/views/settings.pug
+++ b/views/settings.pug
@@ -42,7 +42,7 @@ block content
                         span.text-danger.ms-1 *
                     input(type="password", name="password", placeholder="Az Ön jelszava", required="ture", value="").form-control
                     br
-                    input(type="submit", name="submit" value="Módosítások mentése").btn.btn-success
+                    input(type="submit", name="submit" value="Módosítások mentése").btn.btn-primary
 
             hr
 
