--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -4,20 +4,25 @@ ul {
 }
 
 .message {
-    margin-top: 30px;
-    padding: 10px;
-    font-size: 20px;
-    border-radius: 5px;
+    margin-top: 20px;
+    padding: 15px 30px 10px 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgb(92, 92, 92, 0.5);
 }
 
 .self-message {
     text-align: right;
-    background-color: beige;
+    background-color: #FFF;
     color: black;
 }
 
 .other-message {
     text-align: left;
-    background-color: brown;
+    background-color: #918ef4;
     color: white;
+}
+
+.active-friend {
+    background-color: rgb(206, 206, 206);
 }
