--- a/public/css/index.css
+++ b/public/css/index.css
@@ -249,17 +249,19 @@ img {
 }
 
 .horizontal-list {
+    box-shadow: 0px 0px 30px #f9fcfff5 inset;
     overflow: auto;
     white-space: nowrap;
-    padding: 50px;
+    padding: 42px;
+    scrollbar-width: none;
 }
 
 .horizontal-list > li {
     display: inline;
     padding: 30px;
-    margin: 10px 10px 10px 10px;
+    margin: 25px 10px 10px 10px;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.677);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.399);
 }
 
 #avatar-box {
@@ -305,21 +307,17 @@ img {
 }
 
 .event-row {
-    margin-top: 50px;
-    margin-bottom: 20px;
-    width: 750px;
-    background-color: var(--light-mid-color);
-    border-radius: 10px !important;
-    padding: 20px;
+    padding: 15px !important;
     color: var(--dark-color);
-    box-shadow: 0px 0px 20px rgba(42, 42, 42, 0.594);
+    transition: transform 1.1s;
 }
 
-a.event-row::before,
-a.event-row::after,
-a.event-row:active,
-a.event-row:hover {
-    color: var(--dark-color);
+.event-row::before,
+.event-row::after,
+.event-row:active,
+.event-row:hover {
+    transform: scale(1.05);
+    transition-timing-function: ease-out;
 }
 
 .textareadetails {
