--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -7,18 +7,20 @@ ul {
     margin-top: 20px;
     padding: 15px 30px 10px 30px;
     font-size: 18px;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0px 0px 15px rgb(92, 92, 92, 0.5);
 }
 
 .self-message {
     text-align: right;
+    align-self: right;
     background-color: #FFF;
     color: black;
 }
 
 .other-message {
     text-align: left;
+    align-self: left;
     background-color: #918ef4;
     color: white;
 }
