--- a/views/index.pug
+++ b/views/index.pug
@@ -24,7 +24,7 @@ block content
                                                             button(type="submit", name="submitpost").btn.btn-primary.btn-lg.m-2
                                                                 i.fas.fa-pencil-alt.me-2
                                                                 | Posztolás
-                                                    .col-sm
+                                                    //.col-sm
                                                         .row.ms-1
                                                             button(type="submit", name="submitpost").btn.btn-secondary.btn-lg.m-2
                                                                 i.fas.fa-pencil-alt.me-2
