--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,7 +39,25 @@ body {
     background-position: center;
     
     color: var(--dark-color);
-    background-color: var(--light-color);
+    /*background-color: var(--light-color);*/
+    background: -moz-linear-gradient(180deg, rgba(20,27,65,0.9) 0%, rgba(48,107,172,0.9) 66%, rgba(111,156,235,0.9) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(20,27,65,0.9) 0%, rgba(48,107,172,0.9) 66%, rgba(111,156,235,0.9) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#141b41",endColorstr="#6f9ceb",GradientType=1);
+    background: linear-gradient(180deg, rgba(20,27,65,0.9) 0%, rgba(48,107,172,0.9) 66%, rgba(111,156,235,0.9) 100%);
+}
+
+.wrapper {
+    position: relative;
+}
+
+.wrapper-content {
+    position: relative;
+    z-index: 100;
+}
+
+.wrapper-background {
+    position: relative;
+    z-index: -100;
 }
 
 .post-card {
@@ -231,7 +249,7 @@ img {
     border-color: rgba(20,27,65,1) !important;
     box-shadow: 0px 10px 10px rgba(20,27,65,1);
 }
-
+/*
 .gradient-custom-1 {
     background: rgb(20,27,65);
     background: -moz-linear-gradient(180deg, rgba(20,27,65,1) 0%, rgba(48,107,172,1) 66%, rgba(111,156,235,1) 100%);
@@ -239,13 +257,17 @@ img {
     background: linear-gradient(180deg, rgba(20,27,65,1) 0%, rgba(48,107,172,1) 66%, rgba(111,156,235,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#141b41",endColorstr="#6f9ceb",GradientType=1);
 }
-
+*/
 .section-white, .card {
     background-color: #f9fcfff5;
     border-radius: 15px;
     box-shadow: 2px 10px 20px rgb(33, 33, 33, 0.2);
     margin: 30px 30px 30px 30px;
     padding: 30px 30px 30px 30px;
+}
+
+section.section-white {
+    margin: 30px 275px 30px 275px !important;
 }
 
 .horizontal-list {
