--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,6 +30,7 @@ html(lang='hu')
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css', rel='stylesheet', type='text/css')
         link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css', rel='stylesheet', type='text/css')
         link(href='/css/index.css?v=1', rel='stylesheet', type='text/css')
+        link(href='/css/bg.css?v=1', rel='stylesheet', type='text/css')
         block styles
     body.gradient-form.gradient-custom-1
         
@@ -90,22 +91,11 @@ html(lang='hu')
                 ul.navbar-nav.me-3.mb-2.mb-lg-0
 
                     if user
-                        li.nav-item.dropdown
-                            a.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
-                                i.fas.fa-bell
-                                #notification-badge.badge.badge-light
-
-                            ul#notification-list.dropdown-menu
-                                //li
-                                    p.dropdown-item
-
-                        li.nav-item(title="Kezdőlap")
-                            a.nav-link(href='/')
-                                i.fas.fa-home.me-2
 
                         li.nav-item.dropdown
                             a.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
                                 i.fas.fa-bars.me-2(title="Menü")
+                                //span Menü
 
                             ul.dropdown-menu
                                 li
@@ -118,10 +108,14 @@ html(lang='hu')
                                         | Beállítások
                                 li
                                     hr.dropdown-divider
-                                //li
-                                    a.dropdown-item(href='/user/messages')
+                                li
+                                    a.dropdown-item(href='/messages')
                                         i.fas.fa-comments.me-1
                                         | Üzenetek
+                                li
+                                    a.dropdown-item(href='/user/friends')
+                                        i.fas.fa-users.me-1
+                                        | Barátok
                                 li
                                     a.dropdown-item(href='/event')
                                         i.fas.fa-calendar.me-1
@@ -137,24 +131,29 @@ html(lang='hu')
                                         i.fas.fa-sign-out-alt.me-1
                                         | Kijelentkezés
                         
-                        li.nav-item(title="Üzenetek")
-                            a.nav-link(href='/messages')
-                                i.fas.fa-envelope.me-2
+                        li.nav-item.dropdown
+                            a.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
+                                i.fas.fa-bell
+                                #notification-badge.badge.badge-light
+
+                            ul#notification-list.dropdown-menu
+                                //li
+                                    p.dropdown-item
+
+                        li.nav-item(title="Kezdőlap")
+                            a.nav-link(href='/')
+                                i.fas.fa-home.me-2
+                                //span Kezdőlap
 
                         li.nav-item(title="Események")
                             a.nav-link(href='/events')
                                 i.fas.fa-calendar.me-2
-                                // span Események
+                                //span Események
 
                         li.nav-item(title="Szülinapok")
                             a.nav-link(href='/birthdays')
                                 i.fas.fa-birthday-cake.me-2
-                                // span Szülinapok
-
-                        li.nav-item(title="Barátok")
-                            a.nav-link(href='/user/friends')
-                                i.fas.fa-users.me-2
-                                //span Barátok
+                                //span Szülinapok
 
                         li.nav-item(title="Keresés")
                             a.nav-link(href='/search')
@@ -163,28 +162,29 @@ html(lang='hu')
                     else
                         li.nav-item
                             a.nav-link(href='/login')
-                                //i.fas.fa-user-circle.me-2
-                                span Bejelentkezés
+                                //i.fas.fa-sign-in-alt.me-2
+                                | Bejelentkezés
                                 
                         li.nav-item.me-4
                             a.nav-link(href='/register')
-                                //i.fas.fa-sign-in-alt.me-2
-                                span Regisztráció
+                                //i.fas.fa-user-plus
+                                | Regisztráció
 
-                //if user
-                    form.d-flex(role='search', method="POST", action="/search/user").me-4
-                        input(type='text' name="q_user" placeholder='Keresés' aria-label='Search').form-control.me-2
-                        button.btn.btn-outline-primary(type="submit", name="submit")
-                            i.fas.fa-search
+        .wrapper
+            .wrapper-content
+                if messages
+                    for message in messages
+                        .alert.alert-warning.text-center.fw-bold.mt-2
+                            i.fas.fa-info-circle.me-2
+                            span= message
 
-        if messages
-            for message in messages
-                .alert.alert-warning.text-center.fw-bold.mt-2
-                    i.fas.fa-info-circle.me-2
-                    span= message
+                block content
 
-        block content
-        
+            .wrapper-background
+                ul.bg-particles
+                    for _ in [1,2,3,4,5,6,7,8,9,10,11]
+                        li
+
         footer.bg-dark.ps-2.pe-2.pt-5.pb-2.text-white
             ul.footer-list
                 li
@@ -207,4 +207,5 @@ html(lang='hu')
         script(src="/js/index.js?v=1", type="text/javascript")
         if user 
             script(src="/js/notif.js?v=1", type="text/javascript")
+        script(src="/js/bg.js?v=1", type="text/javascript")
         block scripts
