--- a/views/part_avatar_choice.pug
+++ b/views/part_avatar_choice.pug
@@ -8,10 +8,10 @@
     img#avatar(src=avatar_url alt='A profilképed' title='A profilképed').mb-1
     br
     
-    button#avatar-left-btn.btn.btn-secondary(type='button' title='Előző' style="border-radius: 50% !important;")
+    button#avatar-left-btn.btn.btn-primary(type='button' title='Előző' style="border-radius: 100% !important;")
         i.fas.fa-arrow-circle-left
 
-    button#avatar-right-btn.btn.btn-secondary(type='button' title='Következő' style="border-radius: 50% !important;").ms-3
+    button#avatar-right-btn.btn.btn-primary(type='button' title='Következő' style="border-radius: 100% !important;").ms-3
         i.fas.fa-arrow-circle-right
 
     input#avatar-form(type='text' name='profile' value=getAvatar(avatar_url) hidden='true')
