--- a/views/index.pug
+++ b/views/index.pug
@@ -5,11 +5,12 @@ block content
         if user
             section
                 h2.text-center.p-3.text-white Üdvözöllek 
-                    span.fw-bold= user.name
+                    span.nice-text(style="text-shadow: 0 0 5px rgb(200, 200, 200, 0.1);")= user.name
+                    span !
                 .container
                     .row.d-flex.justify-content-center.align-items-center
                         .col-xl-10
-                            .card.rounded-3.text-black.bg-light(style="margin-bottom: 0px; margin-top: 5px;")
+                            .card.rounded-3.text-black.bg-light(style="margin-bottom: 0px; margin-top: 10px;")
                                 .row.g-0
                                     .col-lg-12
                                         h1.p-2.fw-bold.text-left
