--- a/views/login.pug
+++ b/views/login.pug
@@ -14,7 +14,9 @@ block content
                                 .card-body.p-md-5.mx-md-4
                                     .text-center
                                         img(src='images/logo.png', style='width: 185px;', alt='logo')
-                                        h4.mt-1.mb-5.pb-1 Ünnepeljünk együtt!
+                                        h4.mt-1.mb-5.pb-1 Ünnepeljünk
+                                            span.nice-text  együtt
+                                            span !
 
                                     form(action="/login", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         label.form-label(for='form2Example11')
