--- a/views/register.pug
+++ b/views/register.pug
@@ -14,7 +14,7 @@ block content
                                 .card-body.p-md-5.mx-md-4
                                     .text-center
                                         h4.mt-1 Még nem vagy tag? 
-                                        h2.mb-5
+                                        h2.mb-5.nice-text
                                             b Regisztrálj!
                                     form(action="/register", method="POST").form-outline.mb-4.pt-1.mb-5.pb-1
                                         
