--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,8 +14,7 @@ https://coolors.co/141b41-306bac-6f9ceb-98b9f2-918ef4
 }
 
 :root {
-    --icon-color: #ac5f30;
-    --nice-text: #ac5f30;
+    --icon-color: #cc7096;
 
     --dark-color: #252627;
     --light-color: #f9fffe;
@@ -219,7 +218,7 @@ img {
 #notification-badge {
     color: white;
     background-color: rgb(229, 57, 57);
-    margin-left: 5px;
+    margin-left: -5px;
     font-size: 8px;
 }
 
@@ -294,7 +293,7 @@ img {
 .section-white, .card {
     background-color: #f9fcfff5;
     border-radius: 15px;
-    box-shadow: 2px 10px 20px rgb(33, 33, 33, 0.2);
+    box-shadow: 0px 0px 20px rgb(33, 33, 33, 0.4);
     margin: 30px 30px 30px 30px;
     padding: 30px 30px 30px 30px;
 }
@@ -323,13 +322,13 @@ section.section-white {
     margin: 0 auto;
     text-align: center;
     width: 100px;
+    align-items: center;
+    align-content: center;
 }
 
 #avatar {
     width: 100px;
-    border-radius: 1px;
-    border-style: solid;
-    border-color: var(--main-dark-color);
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.4);
 }
 
 .event-desc {
