--- a/views/part_avatar_choice.pug
+++ b/views/part_avatar_choice.pug
@@ -1,4 +1,4 @@
-#avatar-box.text-center
+#avatar-box
     - function getAvatar(url) {
     -   var parts = url.split("/");
     -   return parts[parts.length - 1];
