--- a/views/register.pug
+++ b/views/register.pug
@@ -57,6 +57,6 @@ block content
                                         // <a class="text-muted" href="#!">Forgot password?</a>
 
                             .col-lg-6.d-flex.align-items-center
-                                img.loginpic(src='images/kep.png' style="filter: blur(2px);")
+                                img.loginpic(src='images/kep.png')
 
     div(style="margin-bottom:500px;")
