--- a/views/user.pug
+++ b/views/user.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     section.section-white
     
-        .row.text-left
+        .row
             .col-sm-1
                 img(src="/images/profiles/" + view_user.profile, style="width: 50px; margin: 0;")
             .col-sm
